test/Fail/NotAValidLetBinding.err
NotAValidLetBinding.agda:8.11-10.25: error: [NotAValidLetBinding]
Not a valid let binding
when scope checking
let pred : N → N
    pred z = z
    pred (s n) = n
in pred (s (s z))
